--- a/mcmc_plugin/mp_param_templates/connect_lite.param.template
+++ b/mcmc_plugin/mp_param_templates/connect_lite.param.template
@@ -9,11 +9,31 @@ data.over_sampling=[1,1]
 # Nuisance parameter list, same call, except the name does not have to be a class name
 
 data.parameters['A_planck']          = [ 1.00061,   0.9,   1.1,     0.0025,     1, 'nuisance']
+
 # Derived parameter list
 
 # Connect model name used by plugin
 data.cosmo_arguments['connect_model'] = 'model_name'
 
+
+data.cosmo_arguments['k_pivot'] = 0.05
+# The base model features two massless
+# and one massive neutrino with m=0.06eV.
+# The settings below ensures that Neff=3.046
+# and m/omega = 93.14 eV
+
+data.cosmo_arguments['N_ur'] = 2.0328
+data.cosmo_arguments['N_ncdm'] = 1
+data.cosmo_arguments['m_ncdm'] = 0.06
+data.cosmo_arguments['T_ncdm'] = 0.71611
+
+# These two are required to get sigma8 as a derived parameter
+# (class must compute the P(k) until sufficient k)
+data.cosmo_arguments['output'] = 'mPk'
+data.cosmo_arguments['P_k_max_h/Mpc'] = 1.
+
+# These are additional DRMD parameters
+data.cosmo_arguments['start_large_k_at_tau_h_over_tau_k'] = 0.00002
 #------ Mcmc parameters ----
 
 data.N=10
